--- a/car_tracking_sensor/src/main/resources/application.properties
+++ b/car_tracking_sensor/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/fms
 spring.datasource.username=****
 spring.datasource.password=****
 
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=validate
 
 spring.jpa.show-sql=true
 
